2009-10-20 Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#142511 - Increse in memory usage of hildon-desktop while 
	                   playing games.
	Memory leaks in h-d caused by GetOverlayWindow without a Release.
	* src/mb/hd-comp-mgr.c
	* src/util/hd-util.c: Now use the variable for the overlay window
	  we always had in comp_mgr_clutter->priv
	* debian/control: Depends on new libmatchbox that allows us to
	  get at the overlay window

	Reverted NB#131081 again (causes issues with rotation)
	* src/home/hd-render-manager.c
	* src/mb/hd-comp-mgr.c

2009-10-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Implement swipe gesture in home edit mode to pan between views.

	Fixes: NB#142940 - Changing desktop view while in the layout mode

	* src/home/hd-home-view.c (_HdHomeViewPrivate::pan_gesture_start_x,
	  _HdHomeViewPrivate::pan_gesture_start_y, hd_home_view_shown,
	  hd_home_view_hidden, is_button_press_in_gesture_start_area,
	  pan_gesture_motion, stop_pan_gesture, pressed_on_view,
	  hd_home_view_constructed): Add support for swipe gesture.
	* src/home/hd-home.c (EDGE_INDICATION_OPACITY_INVISIBLE,
	  create_edge_indicator, _hd_home_do_edit_layout,
	  update_edge_indication_visibility, hd_home_hide_edge_indication):
	  Only show edge indication when widget is dragged.

2009-10-19  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#142940 - Changing desktop view while in the layout mode

	* src/home/hd-home.c (EdgeIndicationOpacity,
	  EDGE_INDICATION_OPACITY_DEFAULT,
	  EDGE_INDICATION_OPACITY_WIDGET_MOVING,
	  EDGE_INDICATION_OPACITY_WIDGET_OVER, HdHomeDrag,
	  hd_home_create_edit_button, edge_indication_pressed,
	  create_edge_indicator, hd_home_constructed, _hd_home_do_edit_layout,
	  hd_home_set_operator_applet, update_edge_indication_visibility,
	  hd_home_show_edge_indication, hd_home_hide_edge_indication,
	  hd_home_highlight_edge_indication): Add another mode of edge