@@ -1,3 +1,12 @@
+2009-10-21  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes memory leak when opening and closing task launcher.
+
+	* src/tidy/tidy-finger-scroll.c (tidy_finger_scroll_dispose,
+	  show_scrollbars): Use g_signal_emit_by_name (timeline, "completed")
+	  instead of clutter_timeline_stop (timeline); g_object_unref
+	  (timeline) to not leak memory inside the effect.
+
 2009-10-20 Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#142511 - Increse in memory usage of hildon-desktop while 
